# bazel_cpp_toolchains

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
.github/workflows/: aarch64-linux.yml  autosd.yml  checks.yml  x86_64-linux.yml
bazel/extentions/: common.bzl  gcc.bzl  qcc.bzl
bazel/rules/: common.bzl  gcc.bzl  qcc.bzl
configurations/gcc/: flags.bzl
configurations/qcc/: flags.bzl
docs/: conf.py  index.rst
examples/: .bazelrc  BUILD  MODULE.bazel  README.md  asan_test.cpp  lsan_test.cpp  main.cpp  main_pthread.cpp  math_lib.cpp  math_lib.h  math_lib_test.cpp  test.sh  tsan_test.cpp  ubsan_test.cpp
extensions/: gcc.bzl
rules/: gcc.bzl
templates/common/: BUILD.template
templates/gcc/: BUILD.template  cc_toolchain_config.bzl.template
templates/linux/: cc_toolchain_config.bzl.template
templates/qcc/: BUILD.template  cc_toolchain_config.bzl.template
templates/qnx/: cc_toolchain_config.bzl.template
tests/: .bazelrc  BUILD  MODULE.bazel  main.cpp  main_pthread.cpp
tools/: qnx_credential_helper.py
