# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "test_score_bazel_cpp_toolchains",
    version = "0.1.0",
)

# *******************************************************************************
# Common useful functions and rules for Bazel
# *******************************************************************************
bazel_dep(name = "bazel_skylib", version = "1.8.1")

# *******************************************************************************
# Constraint values for specifying platforms and toolchains
# *******************************************************************************
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.0.4")
# git_override(
#     module_name = "score_bazel_platforms",
#     remote = "https://github.com/eclipse-score/bazel_platforms.git/",
#     commit = "583e52c58f1f110357aa93fcba3c01cbd7b51675",
# )

# *******************************************************************************
# C++ Rules for Bazel
# *******************************************************************************
bazel_dep(name = "rules_cc", version = "0.2.14")

# *******************************************************************************
# Set dependency to Bazel C/C++ Toolchain repository - with overriding path
# *******************************************************************************
bazel_dep(
    name = "score_bazel_cpp_toolchains",
    version = "0.2.0",
)
local_path_override(
    module_name = "score_bazel_cpp_toolchains",
    path = "../",
)

# *******************************************************************************
# Init GCC extention
# Legend:
#     * CPU:   Control Processeor Unit
#     * OS:    Operating System
#     * V:     Version (GCC or SDP)
#     * ES:    Runtime-EcoSystem
#
# *******************************************************************************
gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)

# *******************************************************************************
# Setting default GCC (CPU:x86_64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_gcc_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    version = "12.2.0",
    use_default_package = True,
)

# *******************************************************************************
# Setting default GCC (CPU:aarch64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_aarch64_gcc_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    version = "12.2.0",
    use_default_package = True,
) 

# *******************************************************************************
# Setting custom GCC (CPU:x86_64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.sdp(
    name = "my_toolchain_pkg",
    url = "https://github.com/eclipse-score/toolchains_gcc_packages/releases/download/0.0.1/x86_64-unknown-linux-gnu_gcc12.tar.gz",
    strip_prefix = "x86_64-unknown-linux-gnu",
    sha256 = "457f5f20f57528033cb840d708b507050d711ae93e009388847e113b11bf3600",
    build_file = "@score_bazel_cpp_toolchains//packages/linux/x86_64/gcc/12.2.0:gcc.BUILD",
)
gcc.toolchain(
    name = "my_toolchain",
    sdp_to_link = "my_toolchain_pkg",
    target_os = "linux",
    target_cpu = "x86_64",
    version = "12.2.0",
    extra_link_flags = [
        "-lpthread",
    ]
)

# *******************************************************************************
# Setting GCC (CPU:x86_64|OS:QNX|version(sdp):8.0.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_qcc_toolchain",
    target_cpu = "x86_64",
    target_os = "qnx",
    sdp_version = "8.0.0",
    version = "12.2.0",
    use_default_package = True,
)

# *******************************************************************************
# Setting GCC (CPU:aarch64|OS:QNX|version(sdp):8.0.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_qcc_arm_toolchain",
    target_cpu = "aarch64",
    target_os = "qnx",
    sdp_version = "8.0.0",
    version = "12.2.0",
    use_default_package = True,
)

# TODO: Not yet supported
# *******************************************************************************
# Setting local host GCC (CPU:x86_64|OS:Linux|V:unknown|ES:host)
# *******************************************************************************
# gcc.toolchain(
#     name = "score_system_toolchain",
#     target_cpu = "x86_64",
#     target_os = "linux",
#     use_system_toolchain = True,
# )

# TODO: Not yet supported
# *******************************************************************************
# Setting AutoSD GCC (CPU:x86_64|OS:Linux|V:unknown|ES:autosd)
# *******************************************************************************
# gcc.toolchain(
#     name = "score_autosd_9_toolchain",
#     target_cpu = "x86_64",
#     target_os = "linux",
#     runtime_ecosystem = "autosd",
#     version = "9",
#     use_system_toolchain = True,
# ) 

use_repo(
    gcc,
    "score_gcc_toolchain",
    "score_aarch64_gcc_toolchain",
    "my_toolchain",
    "score_qcc_toolchain",
    "score_qcc_arm_toolchain",
)